# lyrics-client

./: README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
lyrics_client/: main.py
lyrics_client/classes/: __init__.py  fetch_lyrics_command.py  fetch_lyrics_result.py
lyrics_client/classes/clients/: __init__.py  abstract_lyrics_client.py  azlyrics_lyrics_client.py  genius_lyrics_client.py  musixmatch_lyrics_client.py
lyrics_client/di/: __init__.py  dependency_injection.py  dependency_injector.py
lyrics_client/errors/: __init__.py  bad_title_match_error.py
lyrics_client/interfaces/: __init__.py  base_lyrics_client.py
tests/: my_vcr.py  test_azlyrics_client.py  test_genius_client.py  test_musixmatch_client.py
tests/cassettes/: test_fetch_lyrics.yml  test_get_lyrics.yml  test_search_songs.yml  test_search_songs_with_typos.yml
tests/cassettes/test_azlyrics_client/: test_client_name_is_azlyrics.yml  test_fetch_lyrics.yml  test_get_lyrics.yml  test_headers_session_and_xcode_initialized.yml  test_search_songs.yml
tests/cassettes/test_genius_client/: test_fetch_lyrics.yml  test_get_lyrics.yml  test_search_songs.yml  test_search_songs_with_typos.yml
tests/cassettes/test_musixmatch_client/: test_fetch_lyrics.yml  test_get_lyrics.yml  test_search_songs.yml
