[tool.poetry]
name = "lyrics-client"
version = "0.0.1"
description = "A generic client to fetch lyrics from a song's data"
authors = ["Billuc <billuc@hotmail.fr>"]
license = "MIT"
readme = "README.md"

keywords = ["lyrics client", "lyrics", "python", "genius"]

homepage = "https://github.com/Billuc/Taipan-DI"
repository = "https://github.com/Billuc/Taipan-DI"
documentation = "https://github.com/Billuc/Taipan-DI"

classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

include = ["lyrics_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
taipan-di = "^0.0.4"
python-slugify = "^8.0.1"
rapidfuzz = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"
vcrpy = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "lyrics_client"
]

[tool.black]
line-length = 92
